--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -4,4 +4,17 @@ excluded:
   - Tests/*/XCTestManifests.swift
   - Tests/LinuxMain.swift
 
+opt_in_rules:
+  - anyobject_protocol
+  - closure_end_indentation
+  - closure_spacing
+  - explicit_init
+  - modifier_order
+  - prefer_self_type_over_type_of_self
+  - sorted_imports
+  - test_case_accessibility
+  - unneeded_parentheses_in_closure_argument
+  - vertical_whitespace_between_cases
+  - vertical_whitespace_closing_braces
+
 warning_threshold: 10
