--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -17,4 +17,10 @@ opt_in_rules:
   - vertical_whitespace_between_cases
   - vertical_whitespace_closing_braces
 
+identifier_name:
+  excluded:
+  - id
+  - to
+  - ws
+
 warning_threshold: 10
