--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -17,3 +17,5 @@ jobs:
       run: swift build -v
     - name: Run tests
       run: swift test -v
+    - name: Linting
+      run: swift run swiftlint
