--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -18,4 +18,10 @@ jobs:
     - name: Build
       run: swift build -v
     - name: Run tests
+      env:
+          TEST_APP_ID: ${{ secrets.CI_APP_ID }}
+          TEST_APP_KEY: ${{ secrets.CI_APP_KEY }}
+          TEST_APP_SECRET: ${{ secrets.CI_APP_SECRET }}
+          TEST_APP_CLUSTER: ${{ secrets.CI_APP_CLUSTER }}
+          TEST_ENCRYPTION_MASTER_KEY: ${{ secrets.CI_ENCRYPTION_MASTER_KEY }}
       run: swift test -v
